# taskiq-core

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: REPRODUCE.md
examples/: detection.py  observers.py  overview.py
paper/: arxiv_submission_kit.md  build_pdf.py  make_figures.py  paper.bib  paper.md  taskiq-core_arxiv.md
paper/figures/: results.json
taskiq_core/: __init__.py  atlas.py  observers.py  phantoms.py  physical.py  tasks.py
tests/: conftest.py  test_atlas.py  test_determinism.py  test_observers.py  test_phantoms.py  test_physical.py  test_tasks.py
