[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taskiq-core"
version = "0.3.0"
description = "Task-based image quality on synthetic phantoms: MTF / NPS / NEQ and model-observer detectability in one pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shuji Yamamoto", email = "yamamoto@lisit.jp" }]
keywords = [
  "image quality",
  "task-based image quality",
  "MTF",
  "NPS",
  "NEQ",
  "model observer",
  "medical imaging",
  "phantom",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-image>=0.20",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/institute-of-one/taskiq-core"
Repository = "https://github.com/institute-of-one/taskiq-core"

# The GUI workbench lives in its own repository — taskiq-studio — and depends on this
# package. It is deliberately not part of the library: deleting it changes nothing here.

[tool.setuptools.packages.find]
include = ["taskiq_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
